// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PageLayoutWrapper should render default page wrapper with children 1`] = `
.emotion-0 {
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: #FDFDFD;
}

.emotion-1 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2147483647;
}

.emotion-3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

.emotion-5 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-5 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-5 a:focus,
.emotion-5 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-5 a:hover,
.emotion-5 a:focus {
  border-bottom: solid 0.125rem transparent;
}

@media (max-width: 24.9375rem) {
  .emotion-5 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-7 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding-top: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-7:focus {
  outline: none;
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    margin-top: 1.5rem;
  }
}

.emotion-11 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-11 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-11 li+li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  .emotion-11 li+li {
    margin-top: 0;
  }
}

.emotion-13 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-13 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-13 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-13 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-13 button:focus,
.emotion-13 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-13 button:hover,
.emotion-13 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13 button:focus-visible {
  outline: 0.1875rem solid #000000;
}

@media (min-width: 25rem) {
  .emotion-13 {
    width: 17.3125rem;
  }
}

.emotion-13.hide {
  width: 2.75rem;
  height: 2.75rem;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
}

.emotion-13.hide button {
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
  background: none;
  border: none;
}

.emotion-13.hide button:focus::after,
.emotion-13.hide button:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #FFFFFF;
}

.emotion-13.hide button:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
}

.emotion-13.hide svg {
  color: white;
  fill: currentColor;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-18 {
  background-color: #B80000;
  min-height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
  z-index: 1;
}

@media (min-width: 15rem) {
  .emotion-18 {
    min-height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-18 {
    min-height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    min-height: 4rem;
  }
}

.emotion-20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
}

.emotion-22 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 2.625rem;
}

.emotion-22:hover::before,
.emotion-22:focus::before {
  content: '';
  position: absolute;
  inset: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-22:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0px -0.5rem;
  outline: 0.25rem solid #FFFFFF;
  outline-offset: -0.25rem;
}

.emotion-24 {
  position: relative;
  height: 0;
}

.emotion-25 {
  width: 100%;
  object-fit: cover;
  height: auto;
  max-height: 32px;
  margin-left: 0.5px;
  box-sizing: content-box;
  height: 1.25rem;
  max-width: 100%;
}

@media (min-width: 25rem) {
  .emotion-25 {
    height: 1.5rem;
    margin-left: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-25 {
    height: 1.875rem;
    margin-left: 0;
  }
}

.emotion-26 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-27 {
  position: absolute;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  padding: 0.75rem 0.5rem;
  background-color: #FFFFFF;
  border: 0.1875rem solid #000;
  color: #333;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-27 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-27 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-27:focus {
  -webkit-clip-path: none;
  clip-path: none;
  clip: auto;
  height: auto;
  width: auto;
  top: 0;
  left: 0;
}

@media (min-width: 25rem) {
  .emotion-27:focus {
    top: 0.5rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-27 {
    padding: 0.5rem;
  }
}

.emotion-29 {
  position: relative;
  background-color: #FFFFFF;
}

@media (min-width: 62.9375rem) {
  .emotion-29::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-29 .emotion-45::after {
  left: 0;
}

.emotion-31 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-31 {
    margin: 0 auto;
  }
}

.emotion-33 {
  position: relative;
}

.emotion-35 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-35:hover,
.emotion-35:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-35:hover::after,
.emotion-35:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-35 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-35 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-35 svg {
  vertical-align: middle;
}

.emotion-37 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-37 {
    fill: linkText;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-40 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-40::-webkit-scrollbar {
    display: none;
  }

  .emotion-40:focus-visible {
    outline: none;
  }

  .emotion-40:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-40:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-40:after {
      width: 6rem;
    }
  }
}

.emotion-42 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-42 {
    overflow: hidden;
  }
}

.emotion-44 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-44:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-44::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-46 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-46 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-46 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-46 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-46:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-46:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-46:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-88 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-88 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-88 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-90 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-92 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-92:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-94 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-94 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-94 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-94:hover,
.emotion-94:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-136 {
  position: absolute;
  width: calc(100vw - 0.8rem);
  inset-inline-start: 0;
}

@media (min-width: 1041px) {
  .emotion-136 {
    width: calc(100vw + 0.8rem);
    inset-inline-start: calc(-1 * (100vw - 1014px) / 2);
  }
}

.emotion-136::after {
  content: '';
  position: absolute;
  inset-block-end: 0;
  inset-inline: -0.8rem 0;
  width: calc(100% + 0.8rem);
  border-bottom: 0.0625rem solid #E6E8EA;
}

@media (min-width: 1008px) {
  .emotion-136 {
    display: none;
  }
}

.emotion-138 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.emotion-139 {
  content-visibility: auto;
  contain-intrinsic-size: 33.125rem;
}

@media (min-width: 15rem) {
  .emotion-139 {
    contain-intrinsic-size: 26.563rem;
  }
}

@media (min-width: 20) {
  .emotion-139 {
    contain-intrinsic-size: 23.438rem;
  }
}

@media (min-width: 25rem) {
  .emotion-139 {
    contain-intrinsic-size: 21.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-139 {
    contain-intrinsic-size: 17.188rem;
  }
}

.emotion-142 {
  background-color: #B80000;
  min-height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
  z-index: 1;
}

@media (min-width: 15rem) {
  .emotion-142 {
    min-height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-142 {
    min-height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-142 {
    min-height: 4rem;
  }
}

.emotion-151 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  background-color: #222222;
  padding: 0 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-151 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-151 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-151 {
    padding: 0 0.5rem;
  }
}

.emotion-152 {
  max-width: 63rem;
  margin: 0 auto;
  padding-top: 0.5rem;
}

.emotion-153 {
  border-bottom: 0.0625rem solid #3F3F42;
  -webkit-column-count: 4;
  column-count: 4;
  margin: 0;
  list-style-type: none;
  padding: 0 0 0.5rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-153 {
    display: grid;
    grid-auto-flow: column;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-153 {
    grid-auto-flow: row;
    -webkit-column-count: 1;
    column-count: 1;
  }
}

@media (min-width: 15rem) and (max-width: 37.4375rem) {
  .emotion-153 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2, 1fr);
    -webkit-column-count: 2;
    column-count: 2;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-153 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3, 1fr);
    -webkit-column-count: 3;
    column-count: 3;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-153 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4, 1fr);
    -webkit-column-count: 4;
    column-count: 4;
  }
}

@media (min-width: 80rem) {
  .emotion-153 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5, 1fr);
    -webkit-column-count: 5;
    column-count: 5;
  }
}

.emotion-153>li:first-of-type {
  border-bottom: 0.0625rem solid #3F3F42;
  padding: 0.5rem 0;
  margin-bottom: 0.5rem;
  grid-column: 1/-1;
  width: 100%;
  -webkit-column-span: all;
  column-span: all;
}

@media (min-width: 15rem) and (max-width: 37.4375rem) {
  .emotion-153 {
    grid-template-rows: repeat(4, auto);
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-153 {
    grid-template-rows: repeat(3, auto);
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-153 {
    grid-template-rows: repeat(3, auto);
  }
}

@media (min-width: 80rem) {
  .emotion-153 {
    grid-template-rows: repeat(3, auto);
  }
}

.emotion-154 {
  min-width: 50%;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  break-inside: avoid-column;
}

.emotion-155 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  color: #FFFFFF;
  padding: 0.75rem 0 0.75rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-155:hover,
.emotion-155:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-162 {
  color: #FFFFFF;
  margin: 0;
  padding: 1rem 0;
}

.emotion-162 a {
  padding: 0;
}

.emotion-163 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  color: #FFFFFF;
  padding: 0.75rem 0 0.75rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

.emotion-163:hover,
.emotion-163:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0"
    id="main-wrapper"
  >
    <header
      role="banner"
    >
      <div>
        <div
          class="emotion-1 emotion-2"
          id="consent-banner"
        >
          <div
            class="emotion-3 emotion-4"
            dir="ltr"
          >
            <div
              class="emotion-5 emotion-6"
              dir="ltr"
            >
              <h2
                class="emotion-7 emotion-8"
                dir="ltr"
                tabindex="-1"
              >
                Let us know you agree to cookies
              </h2>
              <p
                class="emotion-9 emotion-10"
                dir="ltr"
              >
                We use 
                <a
                  class="focusIndicatorReducedWidth"
                  href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
                >
                  cookies
                </a>
                 to give you the best online experience. Please let us know if you agree to all of these cookies.
              </p>
              <ul
                class="emotion-11 emotion-12"
                dir="ltr"
                role="list"
              >
                <li
                  class="emotion-13 emotion-14"
                  dir="ltr"
                >
                  <button
                    data-cookie-banner="accept"
                    type="button"
                  >
                    Yes, I agree
                  </button>
                </li>
                <li
                  class="emotion-13 emotion-14"
                  dir="ltr"
                >
                  <span>
                    <a
                      data-cookie-banner="reject"
                      href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                    >
                      No, take me to settings
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="emotion-17 emotion-18 emotion-19"
          height="24"
        >
          <div
            class="brand-svg-wrapper emotion-20 emotion-21"
            id="brandSvgHeader"
          >
            <a
              aria-labelledby="BrandLink-topPage"
              class="brand-link focusIndicatorRemove emotion-22 emotion-23"
              href="/news"
              id="topPage"
            >
              <div
                class="emotion-24"
                style="padding-bottom: 14.49%; overflow: hidden; height: 24px;"
              >
                <img
                  alt="BBC News"
                  class="emotion-25"
                  fetchpriority="high"
                  height="30"
                  loading="eager"
                  src="http://localhost:7080/news/images/brandLogo.svg"
                  style="aspect-ratio: 980 / 142;"
                  width="207.04225352112675"
                />
              </div>
              <span
                class="emotion-26"
                id="BrandLink-topPage"
              >
                BBC News
              </span>
            </a>
            <a
              class="focusIndicatorRemove emotion-27 emotion-28"
              dir="ltr"
              href="#content"
            >
              <div>
                Skip to content
              </div>
            </a>
          </div>
        </div>
      </div>
      <nav
        class="emotion-29 emotion-30"
        dir="ltr"
        role="navigation"
      >
        <div
          class="emotion-31 emotion-32"
        >
          <div
            class="emotion-33 emotion-34"
          >
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-35 emotion-36"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-37 emotion-38"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-26"
              >
                Sections
              </span>
            </button>
            <div
              class="emotion-40 emotion-41"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-42 emotion-43"
                role="list"
              >
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/uk"
                  >
                    UK
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/world"
                  >
                    World
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/business"
                  >
                    Business
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/politics"
                  >
                    Politics
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/technology"
                  >
                    Tech
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/science_and_environment"
                  >
                    Science
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/health"
                  >
                    Health
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/education"
                  >
                    Family & Education
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/entertainment_and_arts"
                  >
                    Entertainment & Arts
                  </a>
                </li>
                <li
                  class="emotion-44 emotion-45"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-46 emotion-47"
                    href="/news/stories"
                  >
                    Stories
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="emotion-88 emotion-89"
            data-e2e="dropdown-nav"
            height="0"
          >
            <ul
              class="emotion-90 emotion-91"
              role="list"
            >
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-94 emotion-95"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-uk"
                  class="emotion-94 emotion-95"
                  href="/news/uk"
                >
                  <span
                    id="dropdownNavigation-uk"
                  >
                    UK
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-world"
                  class="emotion-94 emotion-95"
                  href="/news/world"
                >
                  <span
                    id="dropdownNavigation-world"
                  >
                    World
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-business"
                  class="emotion-94 emotion-95"
                  href="/news/business"
                >
                  <span
                    id="dropdownNavigation-business"
                  >
                    Business
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-politics"
                  class="emotion-94 emotion-95"
                  href="/news/politics"
                >
                  <span
                    id="dropdownNavigation-politics"
                  >
                    Politics
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-tech"
                  class="emotion-94 emotion-95"
                  href="/news/technology"
                >
                  <span
                    id="dropdownNavigation-tech"
                  >
                    Tech
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-science"
                  class="emotion-94 emotion-95"
                  href="/news/science_and_environment"
                >
                  <span
                    id="dropdownNavigation-science"
                  >
                    Science
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-health"
                  class="emotion-94 emotion-95"
                  href="/news/health"
                >
                  <span
                    id="dropdownNavigation-health"
                  >
                    Health
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-family-&-education"
                  class="emotion-94 emotion-95"
                  href="/news/education"
                >
                  <span
                    id="dropdownNavigation-family-&-education"
                  >
                    Family & Education
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-entertainment-&-arts"
                  class="emotion-94 emotion-95"
                  href="/news/entertainment_and_arts"
                >
                  <span
                    id="dropdownNavigation-entertainment-&-arts"
                  >
                    Entertainment & Arts
                  </span>
                </a>
              </li>
              <li
                class="emotion-92 emotion-93"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-stories"
                  class="emotion-94 emotion-95"
                  href="/news/stories"
                >
                  <span
                    id="dropdownNavigation-stories"
                  >
                    Stories
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="emotion-136 emotion-137"
          />
        </div>
      </nav>
    </header>
    <div
      class="emotion-138"
    >
      <h2>
        Child element
      </h2>
    </div>
    <footer
      class="emotion-139 emotion-140"
      role="contentinfo"
    >
      <div
        class="emotion-17 emotion-142 emotion-19"
        height="24"
      >
        <div
          class="brand-svg-wrapper emotion-20 emotion-21"
          id="brandSvgFooter"
        >
          <a
            aria-labelledby="BrandLink-footer"
            class="brand-link focusIndicatorRemove emotion-22 emotion-23"
            href="/news"
            id="footer"
          >
            <div
              class="emotion-24"
              style="padding-bottom: 14.49%; overflow: hidden; height: 24px;"
            >
              <img
                alt="BBC News"
                class="emotion-25"
                fetchpriority="low"
                height="30"
                loading="lazy"
                src="http://localhost:7080/news/images/brandLogo.svg"
                style="aspect-ratio: 980 / 142;"
                width="207.04225352112675"
              />
            </div>
            <span
              class="emotion-26"
              id="BrandLink-footer"
            >
              BBC News
            </span>
          </a>
        </div>
      </div>
      <div
        class="emotion-151"
      >
        <div
          class="emotion-152"
        >
          <ul
            class="emotion-153"
            role="list"
          >
            <li
              class="emotion-154"
            >
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/news/help-41670342"
              >
                Why you can trust the BBC
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/terms"
              >
                Terms of Use
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.co.uk/aboutthebbc/"
              >
                About the BBC
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/privacy/"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/usingthebbc/cookies/"
              >
                Cookies
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/accessibility/"
              >
                Accessibility Help
              </a>
            </li>
            <li>
              <a
                class="focusIndicatorInvert emotion-155"
                href="https://www.bbc.com/contact/"
              >
                Contact the BBC
              </a>
            </li>
          </ul>
          <p
            class="emotion-162"
          >
            <span
              lang="en-GB"
            >
              ©
               
            </span>
            2026 BBC. The BBC is not responsible for the content of external sites.
             
            <a
              class="focusIndicatorInvert emotion-163"
              href="https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links"
            >
              Read about our approach to external linking.
            </a>
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`PageLayoutWrapper should render fonts for afaanoromoo 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for afrique 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for amharic 1`] = `
{
  "font-family": ""Noto Sans Ethiopic", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for arabic 1`] = `
{
  "font-family": ""BBC Reith Qalam", "Times New Roman", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for azeri 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for bengali 1`] = `
{
  "font-family": ""Noto Serif Bengali", Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for burmese 1`] = `
{
  "font-family": "Padauk, Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for dari 1`] = `
{
  "font-family": ""BBC Reith Qalam", "Times New Roman", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for gahuza 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for gujarati 1`] = `
{
  "font-family": ""Noto Sans Gujarati", Rasa, "Hind vadodara", Shruti, Gautami, "Gujarati Sangam MN", "Gujarati MT", sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for hausa 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for hindi 1`] = `
{
  "font-family": "Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for igbo 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for indonesia 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for japanese 1`] = `
{
  "font-family": ""Hiragino Kaku Gothic Pro", "ﾋﾗギﾉ角ゴPro W3", "MS PGothic", "MS UI Gothic", Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for korean 1`] = `
{
  "font-family": ""Apple SD Gothic Neo", AppleGothic, "Malgun Gothic", Dotum, "Noto Sans CJK KR", sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for kyrgyz 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for magyarul 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for marathi 1`] = `
{
  "font-family": ""Noto Sans Devanagari", Hind, "Mukta Vaani", Gautami, "Kohinoor Devanagari", sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for mundo 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for nepali 1`] = `
{
  "font-family": "Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for news 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for pashto 1`] = `
{
  "font-family": ""BBC Reith Qalam", "Times New Roman", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for persian 1`] = `
{
  "font-family": ""BBC Reith Qalam", "Times New Roman", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for pidgin 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for polska 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for portuguese 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for punjabi 1`] = `
{
  "font-family": ""Noto Sans Gurmukhi", Gautami, "Kohinoor Gurmukhi", sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for romania 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for russian 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for serbian 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for sinhala 1`] = `
{
  "font-family": ""Noto Serif Sinhala", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for somali 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for sport 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for swahili 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for tamil 1`] = `
{
  "font-family": ""Noto Sans Tamil", Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for telugu 1`] = `
{
  "font-family": ""Noto Sans Telugu", "Hind Guntur", Gautami, "Kohinoor Telugu", sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for thai 1`] = `
{
  "font-family": "Tahoma, Helmet, freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for tigrinya 1`] = `
{
  "font-family": ""Noto Sans Ethiopic", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for turkce 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for ukchina 1`] = `
{
  "font-family": "Helvetica, Arial, STHeiti, "Microsoft YaHei", SimSun",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for ukrainian 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for urdu 1`] = `
{
  "font-family": ""BBC Reith Qalam", "Times New Roman", Arial, Verdana, Geneva, Helvetica, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for uzbek 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for vietnamese 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for ws 1`] = `
{
  "font-family": "ReithSans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for yoruba 1`] = `
{
  "font-family": "Helmet, Freesans, Helvetica, Arial, sans-serif",
  "font-style": "normal",
  "font-weight": "400",
}
`;

exports[`PageLayoutWrapper should render fonts for zhongwen 1`] = `
{
  "font-family": "Helvetica, Arial, STHeiti, "Microsoft YaHei", SimSun",
  "font-style": "normal",
  "font-weight": "400",
}
`;
